style.css
* {
    box-sizing: border-box;
}
html, body {
    height: 100%;
}
body {
    margin: 0;
    font-family: Helvetica;
    display: flex;
    justify-content: center;
    align-items: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url(https://pyxis.nymag.com/v1/imgs/978/4d0/4b4779e1dcb86984abe55c08366f9babe7-13-empty-theater.rsquare.w700.jpg);
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    width: 400px;
    height: 480px;
    background-color: rgba(139, 114, 167, 0.438);
    font-family: fantasy;
    color: white;
}

#title {
    font-size: 30px;
}

#year {
    font-size: 24px;
}

#genre {
    font-size: 24px;
}

#director {
    font-size: 24px;
}

#rated {
    font-size: 24px;
}

#plot {
    font-size: 20px
}

td {
    font-size: 18px;
}

input[type=text] {
    width: 70%;
    height: 79%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;   
    border: 2px solid ;
    border-radius: 4px;
    background-color:rgba(56, 54, 167, 0.432)
  }

button[type=submit] {
    width: 20%;
    height: 72%;
    background-color:darkred
    
}

i {
    font-size: 24px;
    
}

